<resources>
    <string name="app_name">Project</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Click here for login</string>
    <string name="name">First Name</string>
    <string name="surname">Last name</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="panel">Personal Panel</string>
    <string name="bio">Bio</string>
    <string name="update">Update</string>
</resources>